--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -6,7 +6,8 @@
     "clients": "Для клиентов",
     "about": "О компании",
     "contact": "Контакты",
-    "language": "Язык"
+    "language": "Язык",
+    "catalog": "Каталог"
   },
   "welcome": "Добро пожаловать в Vero Ceilings",
   "whyus": {
@@ -45,7 +46,9 @@
     }
   },
   "products": {
-    "title": "Наши продукты",
+    "page_title": "Наши проекты",
+    "products_section_title": "Потолочные системы",
+    "accessories_section_title": "Аксессуары",
     "grilyato": {
       "title": "Потолки Грильято",
       "description": "Современные, универсальные и простые в установке."
@@ -120,14 +123,46 @@
   },
   "footer": {
     "links": {
-      "title": "Ссылки"
+      "title": "Ссылки",
+      "home": "Главная",
+      "about": "О нас",
+      "products": "Продукты",
+      "projects": "Проекты",
+      "contact": "Контакты"
     },
-    "products": {
-      "title": "Продукты"
+    "product_detail": {
+      "dimensions": "Размеры",
+      "product": "Продукт",
+      "size": "Размер",
+      "name": "Имя",
+      "width": "Ширина",
+      "height": "Высота",
+      "length": "Длина",
+      "application_cases": "Сферы применения"
+    }
+      "title": "Продукты",
+      "metal_armstrong": {
+        "title": "Металлический Армстронг"
+      },
+      "gypsum_armstrong": {
+        "title": "Гипсовый Армстронг"
+      },
+      "washing_armstrong": {
+        "title": "Моющийся Армстронг"
+      },
+      "grilyato": {
+        "title": "Грильято"
+      },
+      "slat_ceiling": {
+        "title": "Реечный потолок"
+      }
     },
     "contact": {
       "title": "Контакты",
-      "address": "Ташкент, Чиланзар, Чорбог 27."
+      "address": "Ташкент, Чиланзар, Чорбог 27.",
+      "phone1": "+998 (90) 098 11 10",
+      "phone2": "+998 (90) 109 11 10",
+      "email": "veroceilingsuz@gmail.com"
     },
     "newsletter": {
       "title": "Подпишитесь на нашу рассылку",
@@ -136,5 +171,68 @@
       "button": "Подписаться"
     },
     "rights": "Все права защищены."
+  },
+  "about": {
+    "page_title": "О нас",
+    "intro_title": "Группа компаний «Vero Group» выражает Вам свое почтение!",
+    "intro_text": "Группа компаний «Vero Group», основанная в 2014 году. Холдинг включает в себя более 10 компаний, специализирующихся на производстве широкого спектра строительных материалов. Группа компаний «Vero Group» постоянно расширяет свой ассортимент, используя современное оборудование и передовые технологии, придерживается высоких стандартов качества, имеет международные сертификаты и производит экологически чистую продукцию, идеально подходящую для различных строительных применений.",
+    "counter1_title": "Заводские рабочие",
+    "counter1_text": "В компании «Vero Group» работает 1700 квалифицированных специалистов различного профиля, технологов и рабочих, которые служат развитию и процветанию Компании. Их опыт гарантирует, что каждый продукт соответствует самым высоким стандартам качества и мастерства, обеспечивая удовлетворенность наших клиентов.",
+    "counter2_title": "Современное оборудование",
+    "counter2_text": "Наша компания производит высококачественные строительные материалы, используя более 200 единиц современного оборудования. От фундамента до отделки мы обеспечиваем точность и надежность в каждом продукте. Доверьтесь нам, чтобы мы предоставили качество, которое создает превосходное строительство.",
+    "counter3_title": "С нами сотрудничают более 120 уважаемых партнеров.",
+    "counter3_text": "Мы предоставляем вам богатый опыт, разнообразие и качественное обслуживание. Изучите нашу сеть и будьте уверены в работе с лучшими в отрасли, преданными удовлетворению ваших потребностей с непоколебимой приверженностью и профессионализмом.",
+    "story_title": "Vero Ceilings: Поднимая пространства с десятилетием превосходства.",
+    "story_text": "Vero Ceilings является одним из подразделений группы компаний «Vero Group», которая производит потолки, декор из МДФ, подвесные потолки ARMSTRONG, а также реализует свою продукцию в 14 регионах Узбекистана. Vero Ceilings не просто производит потолки; она создает архитектурные шедевры. Ассортимент продукции включает в себя инновационные акустические и эстетические потолочные конструкции, а также передовые решения для коммерческих и жилых помещений. Стремясь к совершенству, Vero Ceilings предоставляет не только визуально впечатляющие варианты, но и функциональные решения, гарантируя, что их потолки отвечают разнообразным потребностям современного строительства. Vero Ceilings предоставляет перечень оказываемых услуг: дизайн, замеры, монтаж, доставка. Основная цель Vero Ceilings – предоставить потребителям высококачественную, безопасную фирменную продукцию, изготовленную из лучшего сырья.",
+    "vision_title": "Видение Vero Group: десятилетие успеха, будущее превосходства",
+    "vision_text": "После почти десятилетия роста Vero Group укрепила свои позиции на рынке, завоевав доверие благодаря высококачественной продукции. Признанная не только в Узбекистане, Vero Group выделяется быстрым развитием и соединением потребителей с современной жизнью. Vero Ceilings, подразделение Vero Group, производит исключительные потолки в четырех регионах Узбекистана, нанимая 1700 заводских рабочих. Предлагая преимущества для постоянных клиентов, компания предоставляет бесплатные услуги по замеру и доставку для заказов свыше 100 квадратных метров. За прошедшие годы Vero достигла вех, включая визит Президента Узбекистана Шавката Мирзиёева, который высоко оценил работу компании. Активно участвуя в международных выставках, таких как «Aquatherm Tashkent 2017» и «ShymkentBuild 2018», Vero получила сертификаты за свой выдающийся вклад в отрасль. Поскольку Vero Group смотрит в будущее, она по-прежнему привержена совершенству и стремится внести значительный вклад в мировую строительную отрасль."
+  },
+  "faq": {
+    "title": "Часто задаваемые вопросы",
+    "q1": {
+      "question": "Какие типы потолков вы предлагаете?",
+      "answer": "Мы предлагаем широкий ассортимент, включая Грильято, Армстронг (гипсовый, металлический, моющийся), реечные потолки и многое другое. Наши продукты разработаны для удовлетворения разнообразных эстетических и функциональных потребностей."
+    },
+    "q2": {
+      "question": "Предоставляете ли вы услуги по установке?",
+      "answer": "Да, мы предлагаем комплексные услуги по установке для всех наших потолочных продуктов. Наша опытная команда обеспечивает бесперебойный и эффективный процесс установки, гарантируя оптимальную производительность и долговечность."
+    },
+    "q3": {
+      "question": "Какова ваша гарантийная политика?",
+      "answer": "Все наши продукты поставляются с 15-летней гарантией, что отражает нашу уверенность в их долговечности и качестве. Это обязательство обеспечивает вам спокойствие и уверенность в ваших инвестициях."
+    },
+    "q4": {
+      "question": "Могу ли я получить образец вашей продукции?",
+      "answer": "Да, мы можем предоставить образцы нашей продукции. Пожалуйста, свяжитесь с нашим отделом продаж, чтобы запросить образцы и обсудить требования вашего проекта."
+    },
+    "q5": {
+      "question": "Каковы требования к уходу за вашими потолками?",
+      "answer": "Требования к уходу зависят от продукта. Как правило, наши потолки не требуют особого ухода и их можно чистить влажной тканью. Мы предоставляем подробные инструкции по уходу за каждым продуктом."
+    },
+    "q6": {
+      "question": "Предлагаете ли вы индивидуальные дизайнерские решения?",
+      "answer": "Да, мы специализируемся на индивидуальных дизайнерских решениях. Наша команда тесно сотрудничает с архитекторами и дизайнерами для создания уникальных потолочных систем, отвечающих конкретным потребностям проекта."
+    }
+  },
+  "contact": {
+    "page_title": "Свяжитесь с нами",
+    "view_map": "Посмотреть карту",
+    "form_description_new": "Мы будем рады услышать вас! Свяжитесь с нами любым из следующих способов или заполните форму.",
+    "phone_number": "+998 (90) 098 11 10",
+    "email_address": "veroceilingsuz@gmail.com",
+    "location": "Ташкент, Чиланзар, Чорбог 27.",
+    "name_label": "Имя",
+    "phone_label": "Телефон",
+    "email_label": "Электронная почта",
+    "message_label": "Сообщение",
+    "name_placeholder_new": "Ваше имя",
+    "phone_placeholder_new": "Ваш телефон (необязательно)",
+    "email_placeholder_new": "you@example.com",
+    "message_placeholder_new": "Ваше сообщение здесь...",
+    "send_button": "Отправить сообщение",
+    "status_sending": "Отправка сообщения...",
+    "status_success": "Спасибо за ваше сообщение! Мы свяжемся с вами в ближайшее время.",
+    "status_error": "Не удалось отправить сообщение. Пожалуйста, попробуйте еще раз.",
+    "status_error_generic": "Произошла ошибка. Пожалуйста, попробуйте еще раз."
   }
 }
